--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,17 @@ max-complexity = 10
 max-line-length = 100
 show-source = true
 
+[mypy]
+check_untyped_defs = true
+disallow_any_generics = true
+disallow_incomplete_defs = true
+disallow_untyped_defs = true
+ignore_missing_imports = True
+no_implicit_optional = true
+
+[mypy-tests.*]
+disallow_untyped_defs = false
+
 [isort]
 balanced_wrapping = true
 default_section = THIRDPARTY
