Rewriting with flake8-plugin-utils

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "flake8-if-expr"
-version = "0.1.1"
+version = "0.2.0"
 description = "Check for if expression (ternary operator)"
 authors = ["Afonasev Evgeniy <ea.afonasev@gmail.com>"]
 license = "MIT"
@@ -10,10 +10,11 @@ homepage = "https://pypi.org/project/flake8-if-expr"
 keywords = ['flake8', 'linter']
 
 [tool.poetry.plugins."flake8.extension"]
-KEK100 = 'flake8_if_expr:IfExprChecker'
+KEK100 = 'flake8_if_expr:IfExprPlugin'
 
 [tool.poetry.dependencies]
 python = "^3.6"
+flake8-plugin-utils = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0",allows-prereleases = true}
