--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ exclude = .git, .venv
 ignore =
     A003 ; 'id' is a python builtin, consider renaming the class attribute
     W503 ; line break before binary operator
+    N802 ; function name 'visit_IfExp' should be lowercase
 max-complexity = 10
 max-line-length = 100
 show-source = true
