--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "flake8-if-expr"
-version = "0.2.1"
-description = "Check for if expression (ternary operator)"
+version = "1.0.0"
+description = "The plugin checks `if expressions` (ternary operator)"
 authors = ["Afonasev Evgeniy <ea.afonasev@gmail.com>"]
 license = "MIT"
 readme = 'README.md'
@@ -10,11 +10,11 @@ homepage = "https://pypi.org/project/flake8-if-expr"
 keywords = ['flake8', 'linter']
 
 [tool.poetry.plugins."flake8.extension"]
-KEK100 = 'flake8_if_expr:IfExprPlugin'
+IF100 = 'flake8_if_expr:IfExprPlugin'
 
 [tool.poetry.dependencies]
 python = "^3.6"
-flake8-plugin-utils = "^0.2.0"
+flake8-plugin-utils = "^1.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^18.3-alpha.0",allows-prereleases = true}
