--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         pip install --upgrade pip
         pip install poetry==1.0.9
-        poetry config settings.virtualenvs.create false
+        poetry config virtualenvs.create false
         poetry install --no-interaction --no-ansi
 
     - name: Run linters
