--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,36 @@
-name: CI
+name: ci
 
 on: [push]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
+  ci:
+    runs-on: ubuntu-18.04
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8]
 
     steps:
     - uses: actions/checkout@v2
-    
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Set up Poetry
+      uses: dschep/install-poetry-action@v1.3
+      with:
+        version: 1.0.9
+
     - name: Install dependencies
       run: |
-        pip install --upgrade pip
-        pip install poetry==1.0.9
         poetry config virtualenvs.create false
         poetry install --no-interaction --no-ansi
 
     - name: Run linters and tests
-      run: |
-        make ci
+      run: make ci
+
+    - name: Check code coverage
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      run: codecov
