--- a/.github/workflows/verify-lables.yml
+++ b/.github/workflows/verify-lables.yml
@@ -1,14 +1,19 @@
-name: "Verify labels for PR"
+name: verify-labels
 
 on:
   pull_request:
     types: [opened, labeled, unlabeled, synchronize]
 
 jobs:
-  verify-labels:
+  run:
     runs-on: ubuntu-18.04
 
     steps:
       - uses: zwaldowski/match-label-action@v2
         with:
-          allowed: 'fix, features, documentation, tests, config'
+          allowed: >
+            fix
+            features
+            documentation
+            tests
+            config
