--- a/.github/workflows/verify-lables.yml
+++ b/.github/workflows/verify-lables.yml
@@ -12,8 +12,8 @@ jobs:
       - uses: zwaldowski/match-label-action@v2
         with:
           allowed: >
-            fix
-            features
+            bug
+            enhancement
             documentation
             tests
             config
