--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,12 +23,14 @@ jobs:
         version: 1.0.9
 
     - uses: actions/cache@v2
+      id: cache
       with:
-        path: ~/.cache/pypoetry
-        key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: ${{ runner.os }}-poetry-
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
 
     - name: Install dependencies
+      if: steps.cache.outputs.cache-hit != 'true'
       run: poetry install --no-interaction --no-ansi
 
     - name: Run linters and tests
