--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,13 +25,16 @@ jobs:
     - uses: actions/cache@v2
       id: cache
       with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
+        path: ~/.poetry_cache
+        key: poetry-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: poetry-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
 
     - name: Install dependencies
       if: steps.cache.outputs.cache-hit != 'true'
-      run: poetry install --no-interaction --no-ansi
+      run: |
+        poetry config settings.virtualenvs.in-project false
+        poetry config settings.virtualenvs.path ~/.poetry_cache
+        poetry install --no-interaction --no-ansi
 
     - name: Run linters and tests
       run: make ci
