--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,20 +25,19 @@ jobs:
     - uses: actions/cache@v2
       id: cache
       with:
-        path: ~/.poetry_cache
-        key: poetry-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: poetry-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+        path: ./.venv
+        key: ${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: ${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
 
     - name: Install dependencies
       if: steps.cache.outputs.cache-hit != 'true'
       run: |
         poetry config virtualenvs.create true
-        poetry config virtualenvs.in-project false
-        poetry config virtualenvs.path ~/.poetry_cache
+        poetry config virtualenvs.in-project true
         poetry install --no-interaction --no-ansi
 
     - name: Run linters and tests
-      run: make ci
+      run: make lint test
 
     - name: Check code coverage
       env:
