--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "flake8-if-expr"
-version = "1.0.0"
+version = "1.0.1"
 description = "The plugin checks `if expressions` (ternary operator)"
 authors = ["Afonasev Evgeniy <ea.afonasev@gmail.com>"]
 license = "MIT"
@@ -17,7 +17,8 @@ python = "^3.6"
 flake8-plugin-utils = "^1.0"
 
 [tool.poetry.dev-dependencies]
-black = {version = "^19.10b0",allows-prereleases = true}
+black = {version = "^19.10b0", allow-prereleases = true}
+codecov = "^2.1.7"
 flake8 = "^3.8"
 flake8-builtins = "^1.5"
 flake8-comprehensions = "^3.2"
@@ -36,5 +37,5 @@ pytest-mock = "^3.1"
 unify = "^0.5"
 
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry>=1.0"]
 build-backend = "poetry.masonry.api"
